# NS_Auto_Paint_Web

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: deploy-pages.yml  release-firmware.yml
core/image/: crop.py  hsb_mapper.py  json_builder.py  json_importer.py  pixelize.py  processor.py  quantize.py
core/models/: canvas_mode.py
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/public/: debug.js
frontend/src/: App.tsx  global.css  main.tsx
frontend/src/compiler/: brush.ts  command-builder.ts  move.ts  optimizer.ts  palette.ts  quadtree.ts  timing.ts  types.ts
frontend/src/components/: CropPreview.tsx
frontend/src/engine/: canvas-mode.ts  crop.ts  hsb-mapper.ts  json-builder.ts  json-importer.ts  pipeline.ts  pixelize.ts  preset-palette.ts  quantize.ts  types.ts
frontend/src/pages/: HomePage.tsx  SplatoonPage.tsx  TomodachiPage.tsx
frontend/src/serial/: pico-flash.ts
fw-rp2040/: CMakeLists.txt  check.ps1  check.sh
fw-rp2040/src/: fat_reader.c  fat_reader.h  flash_store.c  flash_store.h  lfs_config.c  lfs_config.h  log.c  log.h  main.c  mode_detect.c  mode_detect.h  msc_disk.c  msc_disk.h  proto.h  script_engine.c  script_engine.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
services/: image_worker.py
shared/: package.json  proto.ts
ui/widgets/: canvas_preview.py
ui/windows/: pixel_gen_window.py
